--- a/src/components/Academy/Academy.scss
+++ b/src/components/Academy/Academy.scss
@@ -3,7 +3,6 @@
     background: url('./../../imgs/moloko.png') right top no-repeat;
     background-position-y: -150px;
 
-
     &__text {
         &__title {
             font-family: Gilroy;
@@ -23,7 +22,6 @@
     &__table {
         width: 90%;
         margin: 0 auto;
-        // border: none;
         border-collapse: collapse;
         table-layout: fixed;
         width: 100%;
@@ -48,9 +46,6 @@
                 }
             }
         }
-
-
-
 
         thead {
             font-weight: 500;
@@ -106,7 +101,6 @@
         background: url('./../../imgs/moloko.png') right top no-repeat;
         background-position-y: -150px;
 
-
         &__text {
             text-align: center;
 
@@ -128,16 +122,131 @@
         &__table {
             width: 90%;
             margin: 0 auto;
-            // border: none;
             border-collapse: collapse;
             table-layout: fixed;
             width: 100%;
-            // display: grid;
-            // // grid-template-columns: 1fr;
-            // grid-template-rows: 1fr;
 
             &__head {
-                // border-bottom: none !important;
+                display: none;
+            }
+
+            tr {
+                border-collapse: collapse;
+                border-bottom: none;
+
+                &:last-child {
+                    border: none;
+                }
+
+                td {
+                    border-right: none;
+                    display: inline;
+
+                    &:last-child {
+                        border: none;
+                    }
+                }
+            }
+
+            thead {
+                font-weight: 500;
+                font-size: 30px;
+                text-align: center;
+            }
+
+            &__row {
+                &__col {
+                    .image-holder {
+                        margin-top: 15px;
+                        display: grid;
+                        justify-content: center;
+
+                        font-size: 60.445px;
+                        line-height: 50px;
+                        text-align: center;
+
+
+
+                        img {
+                            justify-self: center;
+                            width: 314.31px;
+                            height: 235.74px;
+                            border: 2px solid #5E1210;
+                        }
+                    }
+
+                    .button-holder {
+                        display: grid;
+                        justify-content: center;
+                        row-gap: 15px;
+                        margin: 15px 0;
+
+                        button {
+                            border-radius: 72.2812px;
+                            font-weight: bold;
+                            font-size: 29px;
+                        }
+                    }
+
+                    &__button {
+                        width: 545px;
+                        height: 131.55px;
+                    }
+
+                    .video-holder {
+                        display: grid;
+
+                        img {
+                            padding-bottom: 100px;
+
+                            width: 129px;
+                            height: 129px;
+                            justify-self: center;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 480px) {
+   
+    .academy {
+        height: fit-content;
+        background: url('./../../imgs/moloko.png') right top no-repeat;
+        background-position-y: -150px;
+        button {
+            border-radius: 72.2812px;
+            font-weight: bold;
+            font-size: 20px !important;
+        }
+        &__text {
+            text-align: center;
+
+            &__title {
+                font-family: Gilroy;
+                font-size: 64.485px;
+                line-height: 80px;
+                margin-bottom: 0;
+            }
+
+            &__description {
+                font-weight: 500;
+                font-size: 24px;
+                line-height: 28px;
+                margin-bottom: 80px;
+            }
+        }
+
+        &__table {
+            width: 90%;
+            margin: 0 auto;
+            border-collapse: collapse;
+            table-layout: fixed;
+            width: 100%;
+
+            &__head {
                 display: none;
             }
 
@@ -193,12 +302,15 @@
                     &__button {
                         width: 241px;
                         height: 58.17px;
+                        
                     }
 
                     .video-holder {
                         display: grid;
 
                         img {
+                            width: auto;
+                            height: auto;
                             justify-self: center;
                         }
                     }
@@ -206,10 +318,7 @@
             }
         }
     }
-}
 
-/* Landscape phones and smaller */
-@media (max-width: 480px) {
     .academy__text__title {
         font-size: 35px;
         text-align: center;
@@ -220,3 +329,4 @@
         text-align: center;
     }
 }
+
