--- a/src/components/BackCall/BckCall.scss
+++ b/src/components/BackCall/BckCall.scss
@@ -183,7 +183,7 @@
                     text-align: center;
                 }
             }
-
+            // margin: ;
             &__input {
                 align-self: center;
                 display: grid;
