--- a/src/components/Recall/Recall.scss
+++ b/src/components/Recall/Recall.scss
@@ -73,9 +73,10 @@
     }
 }
 
-@media screen and(max-width:1150px) {
+@media screen and(max-width:1080px) {
     .recall {
-        height: fit-content;
+        height: 100vh;
+        min-height: fit-content;
 
         &__title {
             font-family: Gilroy;
@@ -85,11 +86,6 @@
             margin-top: 0;
         }
 
-        // width: 100%;
-        // height: 100%;
-        // position: fixed;
-
-        // overflow: auto;
         .container {
             flex-direction: column;
             display: flex;
@@ -104,8 +100,8 @@
             border-radius: 10px;
 
             &__image {
-                width: 145px;
-                height: 145px;
+                width: 900%;
+                height: auto;
                 position: relative;
                 right: 25px;
                 align-self: center;
@@ -118,7 +114,7 @@
                 width: 90%;
                 margin: 0 auto;
 
-                padding: 10px;
+                padding: 10px 10px 50px 10px;
                 // display: flex;
                 // max-width: 1000px;
                 // position: relative;
@@ -128,7 +124,7 @@
                     // margin-right: 100px;
                     // margin: 0;
                     position: relative;
-                    width: 60%;
+                    width: 75%;
                     // left: 30px;
                     margin: 0 auto;
 
@@ -143,9 +139,183 @@
                     &__description {
                         font-family: Gilroy;
                         font-style: normal;
+
+                        font-weight: 500;
+                        font-size: 20px;
+                        line-height: 25px;
+                        margin: 0 auto;
+                    }
+                }
+
+                &__arrow {
+                    // margin-left: 90%;
+                    // margin-bottom: 20px;
+                    // cursor: pointer;
+                    display: none;
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and(max-width:480px) {
+    .recall {
+        height: fit-content;
+        // min-height: fit-content;
+
+        &__title {
+            font-family: Gilroy;
+            font-weight: bold;
+            font-size: 64.485px;
+            text-align: center;
+            margin-top: 0;
+        }
+
+        .container {
+            flex-direction: column;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 95%;
+        }
+
+        &__wrapper {
+            display: grid;
+            grid-template-columns: 3% 97%;
+            border-radius: 10px;
+            padding-right: 2.5%;
+            &__image {
+                width: 120px;
+                height: auto;
+                position: relative;
+                right: 25px;
+                align-self: center;
+                z-index: 2;
+            }
+
+            &__block {
+                background: url('./../../imgs/recallBlockBG.png');
+                background-color: #FFF3F9;
+                width: 100%;
+                margin: 0 auto;
+                
+                padding: 10px 10px 50px 10px;
+                // display: flex;
+                // max-width: 1000px;
+                // position: relative;
+                right: 0;
+
+                &__text {
+                    // margin-right: 100px;
+                    // margin: 0;
+                    position: relative;
+                    width: 75%;
+                    // left: 30px;
+                    margin: 0 auto;
+
+                    &__title {
+                        font-family: Gilroy;
+                        font-style: normal;
+                        font-weight: bold;
+                        font-size: 18px;
+                        line-height: 35px;
+                        margin-bottom: 10px;
+                    }
+
+                    &__description {
+                        font-family: Gilroy;
+                        font-style: normal;
+
                         font-weight: 500;
                         font-size: 12px;
-                        line-height: auto;
+                        line-height: 14px;
+                        margin: 0 auto;
+                    }
+                }
+
+                &__arrow {
+                    // margin-left: 90%;
+                    // margin-bottom: 20px;
+                    // cursor: pointer;
+                    display: none;
+                }
+            }
+        }
+    }
+}
+
+@media screen and(max-width:360px) {
+    .recall {
+        height: fit-content;
+        // min-height: fit-content;
+
+        &__title {
+            font-family: Gilroy;
+            font-weight: bold;
+            font-size: 64.485px;
+            text-align: center;
+            margin-top: 0;
+        }
+
+        .container {
+            flex-direction: column;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 95%;
+        }
+
+        &__wrapper {
+            display: grid;
+            grid-template-columns: 3% 97%;
+            border-radius: 10px;
+
+            &__image {
+                width: 120px;
+                height: auto;
+                position: relative;
+                right: 25px;
+                align-self: center;
+                z-index: 2;
+            }
+
+            &__block {
+                background: url('./../../imgs/recallBlockBG.png');
+                background-color: #FFF3F9;
+                width: 90%;
+                margin: 0 auto;
+
+                padding: 10px 10px 50px 10px;
+                // display: flex;
+                // max-width: 1000px;
+                // position: relative;
+                right: 0;
+
+                &__text {
+                    // margin-right: 100px;
+                    // margin: 0;
+                    position: relative;
+                    width: 75%;
+                    // left: 30px;
+                    margin: 0 auto;
+
+                    &__title {
+                        font-family: Gilroy;
+                        font-style: normal;
+                        font-weight: bold;
+                        font-size: 24px;
+                        line-height: 35px;
+                        margin-bottom: 10px;
+                    }
+
+                    &__description {
+                        font-family: Gilroy;
+                        font-style: normal;
+
+                        font-weight: 500;
+                        font-size: 12px;
+                        line-height: 14px;
                         margin: 0 auto;
                     }
                 }
