--- a/src/components/Delivery/Delivery.scss
+++ b/src/components/Delivery/Delivery.scss
@@ -75,7 +75,7 @@
                 display: flex;
 
                 img {
-                    
+
                     margin: 2px;
                     align-self: center;
                 }
@@ -346,10 +346,11 @@
                 // margin: 0;
                 // transition: all .3s;
                 display: grid;
-                width: 500px;
+                width: 60%;
                 height: 490px;
                 max-width: 100%;
                 max-height: fit-content;
+                min-width: 350px;
                 // max-height: 100%;
                 background: #FFFFFF;
                 box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.25);
@@ -401,6 +402,15 @@
                     img {
                         margin: 2px;
                         align-self: center;
+
+                        &:nth-child(2) {
+                            width: 33px;
+                            margin: 10px;
+                        }
+                        &:nth-child(2n-1) {
+                            width: 17px;
+
+                        }
                     }
                 }
             }
@@ -589,6 +599,7 @@
                 box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.25);
                 border-radius: 5px;
                 grid-template-rows: 55% 45%;
+                min-width: auto;
 
                 &:hover {
                     background: #F0C1DB;
@@ -693,6 +704,7 @@
 
     }
 }
+
 @media (max-width: 360px) {
     .delivery {
         height: fit-content;
