--- a/src/components/BackCall/BckCall.scss
+++ b/src/components/BackCall/BckCall.scss
@@ -90,9 +90,9 @@
                 border-radius: 50px;
                 text-align: center;
 
-                &::placeholder {
-                    padding-left: 40px;
-                }
+                // &::placeholder {
+                //     padding-left: 40px;
+                // }
 
                 font-style: normal;
                 font-weight: 500;
@@ -199,9 +199,9 @@
                     // filter: drop-shadow(0px 5px 20px rgba(128, 21, 19, 0.6));
                     border-radius: 50px;
 
-                    &::placeholder {
-                        padding-left: 15px;
-                    }
+                    // &::placeholder {
+                    //     padding-left: 15px;
+                    // }
 
                     font-style: normal;
                     font-weight: 500;
