--- a/src/components/Delivery/Delivery.scss
+++ b/src/components/Delivery/Delivery.scss
@@ -407,6 +407,7 @@
                             width: 33px;
                             margin: 10px;
                         }
+
                         &:nth-child(2n-1) {
                             width: 17px;
 
@@ -646,6 +647,17 @@
                     img {
                         margin: 2px;
                         align-self: center;
+
+                        &:nth-child(2) {
+                            width: 15px;
+                            margin: 2px;
+                        }
+
+                        &:nth-child(2n-1) {
+                            width: 8px;
+
+                        }
+
                     }
                 }
             }
