--- a/src/components/Recall/Recall.scss
+++ b/src/components/Recall/Recall.scss
@@ -104,7 +104,8 @@
                 width: 900%;
                 height: auto;
                 position: relative;
-                right: 25px;
+                right: 30px;
+                left: 0;
                 align-self: center;
                 z-index: 2;
             }
@@ -128,6 +129,7 @@
                     width: 75%;
                     // left: 30px;
                     margin: 0 auto;
+                    padding-left: 70px;
 
                     &__title {
                         font-family: Gilroy;
@@ -188,11 +190,13 @@
             padding-right: 2.5%;
             &__image {
                 width: 120px;
+                
                 height: auto;
                 position: relative;
                 right: 25px;
                 align-self: center;
                 z-index: 2;
+                // margin-right: 10px;
             }
 
             &__block {
@@ -213,6 +217,7 @@
                     position: relative;
                     width: 75%;
                     // left: 30px;
+                    padding-left: 40px;
                     margin: 0 auto;
 
                     &__title {
@@ -273,10 +278,10 @@
             border-radius: 10px;
 
             &__image {
-                width: 120px;
+                width: 130px;
                 height: auto;
                 position: relative;
-                right: 25px;
+                left: -25px;
                 align-self: center;
                 z-index: 2;
             }
@@ -284,7 +289,7 @@
             &__block {
                 background: url('./../../imgs/recallBlockBG.png');
                 background-color: #FFF3F9;
-                width: 90%;
+                width: 100%;
                 margin: 0 auto;
 
                 padding: 10px 10px 50px 10px;
@@ -300,7 +305,8 @@
                     width: 75%;
                     // left: 30px;
                     margin: 0 auto;
-
+                    // padding-left:20px ;
+                    padding-right:20px ;
                     &__title {
                         font-family: Gilroy;
                         font-style: normal;
